# workspacesDiversos

src/: app.py
workspaceETF/: pyproject.toml
workspaceETF/src/: .gitignore
